Alteração geral no heaer, adição da pagina about

--- a/passeios.html
+++ b/passeios.html
@@ -111,20 +111,24 @@
     </style>
 </head>
 <body>
-  <header class="main-header">
-    <nav class="nav-container">
-      <div class="logo">
-        <a href="index.html">
-          <img src="./img/logo.webp" alt="Logo da Empresa">
-        </a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Sobre</a></li>
-        <li><a href="contact.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="main-header">
+        <nav class="nav-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="./img/logo.webp" alt="Logo da Empresa">
+                </a>
+            </div>
+            <div class="header-text">
+                <h1>ValTour Turismo e Locação</h1>
+                <p>Sua melhor escolha em transporte turístico</p>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Sobre</a></li>
+                <li><a href="contact.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
     <section class="tour-header">
