--- a/excursoes.html
+++ b/excursoes.html
@@ -111,18 +111,22 @@
 <body>
   <header class="main-header">
     <nav class="nav-container">
-      <div class="logo">
-        <a href="index.html">
-          <img src="./img/logo.webp" alt="Logo da Empresa">
-        </a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Sobre</a></li>
-        <li><a href="contact.html">Contato</a></li>
-      </ul>
+        <div class="logo">
+            <a href="index.html">
+                <img src="./img/logo.webp" alt="Logo da Empresa">
+            </a>
+        </div>
+        <div class="header-text">
+            <h1>ValTour Turismo e Locação</h1>
+            <p>Sua melhor escolha em transporte turístico</p>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Sobre</a></li>
+            <li><a href="contact.html">Contato</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
 
 
   <section class="excursion-header">
