adicionando texto sobre a empresa

--- a/about.html
+++ b/about.html
@@ -31,9 +31,23 @@
             <h1>Mais de 15 Anos de Experiência</h1>
             <p>Sua viagem com conforto, segurança e credibilidade</p>
         </section>
+        <!-- Add this after the hero-about section -->
+<section class="company-description">
+    <div class="text-container">
+        <h2>Nossa História</h2>
+        <div class="animated-text">
+            <p>Há mais de 15 anos, a ValTour Turismo tem se dedicado a proporcionar experiências únicas em transporte turístico. Nossa jornada começou com um sonho de oferecer serviços de excelência em mobilidade, sempre priorizando o conforto e a segurança de nossos passageiros.</p>
+            
+            <p>Hoje, contamos com uma frota moderna e diversificada, desde carros executivos até ônibus de grande porte, todos equipados com ar-condicionado, poltronas reclináveis e toda infraestrutura necessária para viagens agradáveis.</p>
+            
+            <p>Nossa equipe altamente qualificada e comprometida trabalha incansavelmente para garantir que cada viagem seja uma experiência memorável. Somos regulamentados pelos principais órgãos do setor e mantemos rigorosos padrões de qualidade e segurança.</p>
+        </div>
+    </div>
+</section>
+
 
         <section class="fleet-section">
-            <h2>Nossa Frota</h2>
+            <h2>Sobre Nós</h2>
             <div class="vehicle-grid">
                 <div class="vehicle-card">
                     <img src="https://www.exclusivagroup.com.br/img/ex.png" alt="Carro Executivo">
