--- a/about.html
+++ b/about.html
@@ -107,7 +107,8 @@
     </main>
 
     <footer>
-        <!-- Add your footer content here -->
+        <p>© 2024 Sua Empresa aqui - Todos os direitos reservados</p>
+        <p>Telefone: (22) 998590073 | Email: valmartinsfilho@gmail.com.br</p>
     </footer>
     <script src="./script.js" ></script>
 </body>
