--- a/city-tour.html
+++ b/city-tour.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
 
-    <section class="tour-header">
+    <section class="tour-header-Rio">
         <h1>City Tour Rio de Janeiro</h1>
     </section>
 
